@@ -1,4 +1,5 @@
 Add timezone settings
+Combine Password reset and setting new nickname
 
 Version 1.17 - Apr. 20, 2016
 Make nocache refresh hack configurable in profile
